<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_general"/>

    <ListPreference
        android:defaultValue="0"
        android:key="@string/pref_id_quality"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_summary_quality"
        android:title="@string/pref_title_quality"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_id_save_original"
        android:title="@string/pref_title_save_original"/>

    <ListPreference
        android:defaultValue="0"
        android:key="@string/pref_id_storage"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_storage"/>

    <!-- TODO: Social service -->
    <!--<ListPreference-->
        <!--android:defaultValue="0"-->
        <!--android:entries="@array/pref_list_storage"-->
        <!--android:entryValues="@array/pref_list_storage_values"-->
        <!--android:key="@string/pref_id_storage"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_storage"/>-->

</PreferenceScreen>
