<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/modeMenuContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/mode_menu_size"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibSettings"
                android:layout_width="@dimen/mode_menu_size"
                android:layout_height="@dimen/mode_menu_size"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/xml_btn_gear"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/mode_settings"
                android:textColor="@color/LightGray"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibGalleryMode"
                android:layout_width="@dimen/mode_menu_size"
                android:layout_height="@dimen/mode_menu_size"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/xml_btn_pictures"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/mode_gallery"
                android:textColor="@color/LightGray"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibCameraMode"
                android:layout_width="@dimen/mode_menu_size"
                android:layout_height="@dimen/mode_menu_size"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/xml_btn_camera"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/mode_camera"
                android:textColor="@color/LightGray"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>
    </LinearLayout>
</merge>